--- a/GaneshSoley/Supplier_Onboarding/Supplier_Mgmt_System/Extract_IndustrywiseData.xaml
+++ b/GaneshSoley/Supplier_Onboarding/Supplier_Mgmt_System/Extract_IndustrywiseData.xaml
@@ -1,12 +1,12 @@
 <Activity mc:Ignorable="sap sap2010" x:Class="Extract_IndustrywiseData" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
-    <x:Property Name="in_Config" Type="InArgument(scg:Dictionary(x:String, x:Object))" />
     <x:Property Name="in_FileName" Type="InArgument(x:String)" />
+    <x:Property Name="in_OutputFilePath" Type="InArgument(x:String)" />
   </x:Members>
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>915.333333333333,1869.33333333333</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>609.333333333333,1869.33333333333</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>Extract_IndustrywiseData_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="54">
@@ -104,7 +104,7 @@
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
           </ui:LogMessage>
-          <ui:ReadCsvFile Encoding="{x:Null}" DataTable="[dtSupplierData]" Delimitator="Comma" DisplayName="Read CSV" FilePath="[in_Config(&quot;OutputPath&quot;).ToString + &quot;\&quot; + in_FileName + &quot;.csv&quot;]" sap:VirtualizedContainerService.HintSize="410,156.666666666667" sap2010:WorkflowViewState.IdRef="ReadCsvFile_1" />
+          <ui:ReadCsvFile Encoding="{x:Null}" DataTable="[dtSupplierData]" Delimitator="Comma" DisplayName="Read CSV" FilePath="[in_OutputFilePath + &quot;\&quot; + in_FileName]" sap:VirtualizedContainerService.HintSize="410,156.666666666667" sap2010:WorkflowViewState.IdRef="ReadCsvFile_1" />
           <ui:RemoveDuplicateRows OutputDataTable="{x:Null}" DataTable="[dtSupplierData]" DisplayName="Remove Duplicate Rows" sap:VirtualizedContainerService.HintSize="410,80.6666666666667" sap2010:WorkflowViewState.IdRef="RemoveDuplicateRows_1" />
           <Assign DisplayName="Extract Unique Industries" sap:VirtualizedContainerService.HintSize="410,62" sap2010:WorkflowViewState.IdRef="Assign_2">
             <Assign.To>
@@ -162,7 +162,7 @@
                       </scg:Dictionary>
                     </sap:WorkflowViewStateService.ViewState>
                   </ui:FilterDataTable>
-                  <ui:WriteRange AddHeaders="True" DataTable="[dtFilterData]" DisplayName="Write Range Industry Wise Data" sap:VirtualizedContainerService.HintSize="334,114.666666666667" sap2010:WorkflowViewState.IdRef="WriteRange_2" SheetName="[CurrentRow(&quot;Industry&quot;).ToString]" StartingCell="A1" WorkbookPath="[in_Config(&quot;OutputPath&quot;).ToString + &quot;\&quot; + &quot;Industry_Wise_Data.xlsx&quot;]" />
+                  <ui:WriteRange AddHeaders="True" DataTable="[dtFilterData]" DisplayName="Write Range Industry Wise Data" sap:VirtualizedContainerService.HintSize="334,114.666666666667" sap2010:WorkflowViewState.IdRef="WriteRange_2" SheetName="[CurrentRow(&quot;Industry&quot;).ToString]" StartingCell="A1" WorkbookPath="[in_OutputFilePath + &quot;\&quot; + &quot;Industry_Wise_Data.xlsx&quot;]" />
                 </Sequence>
               </ActivityAction>
             </ui:ForEachRow.Body>
